<resources>
    <string name="app_name">Skripsi</string>
    <string name="skripsi">Samudra Jaya</string>
    <string name="point_of_sale">Point Of Sale</string>
    <string name="kaca">Kaca</string>
    <string name="pigura">Pigura</string>
    <string name="kasir">Kasir</string>
    <string name="data">Data</string>
    <string name="print">Print</string>
    <string name="settings">Settings</string>
    <string name="expense">Biaya</string>
    <string name="report">Laporan</string>
    <string name="customers">Pelanggan</string>
    <string name="suppliers">Suppliers</string>
    <string name="press_once_again_to_exit">Tekan sekali lagi untuk keluar!</string>
    <string name="error">Error</string>
    <string name="refresh">Refresh</string>
    <string name="AdMob_Application_ID">ca-app-pub-8638037215789792~2722511859</string>
    <string name="AdMob_Banner_Ads_ID">ca-app-pub-8638037215789792/8070771952</string>
    <string name="AdMob_Interstitial_Ads_ID">ca-app-pub-8638037215789792/1313791916</string>
    <string name="backup_completed_successfully">Backup Berhasil</string>
    <string name="unable_to_backup_database_retry">Tidak dapat membackup database. Coba lagi!</string>
    <string name="database_Import_completed">Impor Database Selesai</string>
    <string name="unable_to_import_database_retry">Tidak dapat mengimpor database. Coba lagi!</string>
    <string name="reset">Reset</string>
    <string name="ten">10</string>
    <string name="add_to_cart">Tambahkan ke Keranjang</string>
    <string name="stock_is_low_please_update_stock">Stok hampir habis. Harap perbarui stok</string>
    <string name="product_added_to_cart">Barang ditambahkan ke keranjang</string>
    <string name="product_already_added_to_cart">Barang Sudah Ditambahkan ke Keranjang</string>
    <string name="product_added_to_cart_failed_try_again">Barang yang ditambahkan ke keranjang gagal. Coba lagi!</string>
    <string name="total_price">Total Harga:</string>
    <string name="submit_order">Submit Order</string>
    <string name="no_product_in_cart">Tidak Ada Barang di Keranjang</string>
    <string name="cart_weight">1 kg</string>
    <string name="cart_price">$96.00</string>
    <string name="one">1</string>
    <string name="symbol_plus">+</string>
    <string name="product_removed_from_cart">Barang dihapus dari keranjang</string>
    <string name="available_stock">Stok Tersedia</string>
    <string name="product_cart">Keranjang Barang</string>
    <string name="payment">Pembayaran</string>
    <string name="submit">Submit</string>
    <string name="walk_in_customer">Pelanggan</string>
    <string name="pick_up">AMBIL SENDIRI</string>
    <string name="cash">TUNAI</string>
    <string name="sub_total">Sub Total</string>
    <string name="total_tax">Total Pajak</string>
    <string name="discount">Diskon</string>
    <string name="zero_zero">00</string>
    <string name="zero_zero_zero">0.00</string>
    <string name="discount_cant_be_greater_than_total_price">Diskon tidak boleh lebih besar dari Total Harga</string>
    <string name="select_customer">PILIH PELANGGAN</string>
    <string name="select_order_type">PILIH JENIS PESANAN</string>
    <string name="select_payment_method">PILIH METODE PEMBAYARAN</string>
    <string name="order_done_successful">Pesanan Selesai</string>
    <string name="search_here">Cari Di Sini. . . .</string>
    <string name="product_name">Nama Barang</string>
    <string name="buy">Beli</string>
    <string name="stock">Stock</string>
    <string name="price">Harga</string>
    <string name="weight">Panjang/Berat</string>
    <string name="want_to_delete_product">Ingin Menghapus Barang ?</string>
    <string name="product_deleted">Barang Dihapus</string>
    <string name="failed">Gagal</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="all_product">Semua Barang</string>
    <string name="no_product_found">Tidak Ada Barang Ditemukan</string>
    <string name="export_data_to_excel">Expor Data ke Excel</string>
    <string name="data_exporting_please_wait">Mengekspor Data. Mohon tunggu. . .</string>
    <string name="data_successfully_exported">Data Berhasil Diekspor</string>
    <string name="data_export_fail">Ekspor Data Gagal</string>
    <string name="product_code">Kode Barang</string>
    <string name="product_category">Kategori</string>
    <string name="product_buy">Beli</string>
    <string name="product_stock">Stok</string>
    <string name="product_price">Harga</string>
    <string name="percent">100 %</string>
    <string name="product_total_qty">Jumlah QTY</string>
    <string name="product_disc_qty">Disc QTY</string>
    <string name="product_weight">Panjang/Berat</string>
    <string name="product_weight_unit">Satuan</string>
    <string name="product_last_update">Last Update</string>
    <string name="product_information">Keterangan</string>
    <string name="product_supplier">Supplier</string>
    <string name="type_something_to_search">Ketik sesuatu untuk mencari</string>
    <string name="cancel">Batal</string>
    <string name="product_name_cannot_be_empty">Nama Barang tidak boleh kosong!</string>
    <string name="product_buy_cannot_be_empty">Beli Barang tidak boleh kosong!</string>
    <string name="product_stock_cannot_be_empty">Stok Barang tidak boleh kosong!</string>
    <string name="product_price_cannot_be_empty">Harga Barang tidak boleh kosong!</string>
    <string name="product_category_cannot_be_empty">Kategori Barang tidak boleh kosong!</string>
    <string name="product_weight_cannot_be_empty">Panjang/Berat Barang tidak boleh kosong!</string>
    <string name="product_supplier_cannot_be_empty">Supplier tidak boleh kosong!</string>
    <string name="import_from_excel">Impor Dari Excel</string>
    <string name="no_file_found">File Tidak Ditemukan</string>
    <string name="data_importing_please_wait">Mengimpor data. Mohon tunggu. . .</string>
    <string name="data_successfully_imported">Data Berhasil Diimpor</string>
    <string name="data_import_fail">Impor Data Gagal</string>
    <string name="add_product">Tambahkan Barang</string>
    <string name="product_successfully_added">Barang Berhasil Ditambahkan</string>
    <string name="edit_product">Edit Barang</string>
    <string name="update_product">Update Barang</string>
    <string name="product_details">Detail Barang</string>
    <string name="update_successfully">Update Berhasil</string>
    <string name="qr_barcode_scanner">QR or Barcode Scanner</string>
    <string name="camera_permission">Izin Kamera Diperlukan</string>
    <string name="no_order_found">Pesanan Tidak Ditemukan</string>
    <string name="order_status">Status Pesanan</string>
    <string name="order_history">Riwayat Pemesanan</string>
    <string name="order_id">ID Pesanan:</string>
    <string name="payment_method">Metode Pembayaran:</string>
    <string name="order_type">Jenis Pesanan:</string>
    <string name="date">Tanggal:</string>
    <string name="change_order_status">Ubah Status Pesanan</string>
    <string name="please_change_order_status_to_complete_or_cancel">Silakan ubah status pesanan menjadi Selesai atau Batal</string>
    <string name="order_completed">Pesanan Selesai</string>
    <string name="cancel_order">Batalkan Pesanan</string>
    <string name="order_updated">Pesanan Diperbarui</string>
    <string name="generate_pdf_receipt">Nota PDF</string>
    <string name="print_thermal">Print Nota Melalui Printer Thermal</string>
    <string name="order_details">Detail Pesanan</string>
    <string name="qty">Qty</string>
    <string name="total_cost">Total Biaya</string>
    <string name="quantity">Quantity:</string>
    <string name="weight_order_details">Panjang/Berat:</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan devices</string>
    <string name="select_device">Select device</string>
    <string name="none_found">No device found</string>
    <string name="none_paired">No device found</string>
    <string name="scanning">Scanning…</string>
    <string name="print_succ">Print done successfully</string>
    <string name="print_error">Error in printing</string>
    <string name="action_settings">Settings</string>
    <string name="shop_information">Informasi Toko</string>
    <string name="categories">Kategori</string>
    <string name="payment_methods">Metode Pembayaran</string>
    <string name="data_backup">Data Backup</string>
    <string name="shop_name">Nama Toko</string>
    <string name="shop_contact_number">Nomor Kontak Toko</string>
    <string name="shop_email">Email Toko</string>
    <string name="shop_address">Alamat Toko</string>
    <string name="currency_symbol">Simbol Mata Uang</string>
    <string name="shop_currency">Mata Uang Toko</string>
    <string name="tax_in_percentage">Pajak dalam persentase (%)</string>
    <string name="tax">Pajak</string>
    <string name="edit">Edit</string>
    <string name="update_information">Perbarui Informasi</string>
    <string name="shop_name_cannot_be_empty">Nama toko tidak boleh kosong!</string>
    <string name="shop_contact_cannot_be_empty">Kontak toko tidak boleh kosong!</string>
    <string name="enter_valid_email">Masukkan Email yang Valid!</string>
    <string name="shop_address_cannot_be_empty">Alamat toko tidak boleh kosong!</string>
    <string name="shop_currency_cannot_be_empty">Mata uang toko tidak boleh kosong!</string>
    <string name="shop_information_updated_successfully">Informasi Toko Berhasil Diperbarui</string>
    <string name="no_data_found">Tidak Ada Data Ditemukan</string>
    <string name="category_name">Nama Kategori</string>
    <string name="want_to_delete_category">Ingin menghapus kategori ?</string>
    <string name="category_deleted">Kategori Dihapus</string>
    <string name="add_category">Tambahkan Kategori</string>
    <string name="category_added_successfully">Kategori Berhasil Ditambahkan</string>
    <string name="update_category">Perbarui Kategori</string>
    <string name="edit_category">Edit Kategori</string>
    <string name="enter_category_name">Masukkan Nama Kategori</string>
    <string name="category_updated">Kategori Diperbarui</string>
    <string name="weight_unit">Satuan Panjang/Berat</string>
    <string name="want_to_delete_weight_unit">Ingin menghapus satuan panjang/berat ?</string>
    <string name="weight_deleted">Satuan Panjang/Berat Dihapus</string>
    <string name="weight_unit_name">Nama Satuan Panjang/Berat</string>
    <string name="add_weight_unit">Tambahkan Satuan Panjang/Berat</string>
    <string name="enter_weight_unit_name">Masukkan Nama Satuan Panjang/Berat</string>
    <string name="weight_unit_updated">Satuan Panjang/Berat Diperbarui</string>
    <string name="weight_unit_added_successfully">Satuan Panjang/Berat Berhasil Ditambahkan</string>
    <string name="update_weight_unit">Perbarui Satuan Panjang/Berat</string>
    <string name="edit_weight_unit">Edit Satuan Panjang/Berat</string>
    <string name="all_payment_method">Semua Metode Pembayaran</string>
    <string name="want_to_delete">Ingin menghapus ?</string>
    <string name="payment_method_deleted">Metode Pembayaran Dihapus</string>
    <string name="successfully_added">Berhasil Ditambahkan</string>
    <string name="expense_name">Nama Biaya</string>
    <string name="expense_amount">Jumlah Biaya</string>
    <string name="expense_date_time">Tanggal Waktu</string>
    <string name="expense_note_space">Catatan </string>
    <string name="sales_date">Tanggal</string>
    <string name="all_sales">Semua Penjualan</string>
    <string name="total_sales">Total Penjualan :</string>
    <string name="net_sales">Penjualan Bersih</string>
    <string name="daily">Harian</string>
    <string name="monthly">Bulanan</string>
    <string name="yearly">Tahunan</string>
    <string name="export_all_data_to_excel">Ekspor Semua Data ke Excel</string>
</resources>