<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_sales"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/expense" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sailec_regular"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sailec_regular"
                    android:padding="2dp"
                    android:text="@string/sales_date"
                    android:textColor="#EA1D2C" />

                <TextView
                    android:id="@+id/tv_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sailec_regular"
                    android:padding="2dp"
                    android:text="@string/qty"
                    android:textColor="#EA1D2C" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sailec_regular"
                    android:padding="2dp"
                    android:text="@string/weight"
                    android:textColor="#EA1D2C" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sailec_regular"
                        android:padding="2dp"
                        android:text="@string/price"
                        android:textColor="#EA1D2C" />

                    <TextView
                        android:id="@+id/tv_total_cost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/sailec_regular"
                        android:gravity="right"
                        android:padding="2dp"
                        android:text="@string/total_cost"
                        android:textColor="#EA1D2C"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>